--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta
+      charset="UTF-8"
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+
     <title>Extreal R3F Spot Visit</title>
   </head>
   <body>
