--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" href="./avatar-faces/face-michelle.png" />
     <meta
       charset="UTF-8"
       name="viewport"
